# cwasm-standalone

./: Cargo.toml  README.md  build.rs  build.sh  driver.c
mylib/: Cargo.toml
mylib/src/: lib.rs
src/: lib.rs  main.rs
